--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="google-site-verification" content="nE--RfUtLE0R4POQysqp3xVBtnzVsLZ6yIl6_p1nKJY" />
+    <meta name="Description" content="I make things with code and sound.">
+    <meta name="Keywords" content="web design, software engineer, front-end development, freelance developer, freelance web design">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+
     <title>Zack Ensign / Developer</title>
   </head>
   <body>
